compoleted home page

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --primary-black: #333;
+  --primary-light: #c9dae2;
+  --primary-blue: #69a9ff;
+  --light-blue: #f1f9fc;
+  --primary-white: #ffffff;
+  --light-banner-red: rgb(215, 77, 77);
+}
+
+html {
+  font-size: 10px;
+  direction: rtl;
+}
+
+@media screen and (max-width: 600px) {
+  html {
+    font-size: 9px;
+  }
+}
+
+body {
+  font-family: "IRANSans-Medium" !important;
+}
+
+img {
+  display: block;
+  width: 100%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+  outline: none;
+}
+
+button {
+  all: unset;
+}
+
+ul,
+li {
+  list-style-type: none;
+}
+
+input {
+  all: unset;
+  background: var(--primary-white);
+  outline: none;
+  padding: 0px 7px;
+  font-size: 1.4rem;
+}
+
+figure {
+  all: unset;
+}
+
+.text-white {
+  color: var(--primary-white) !important;
+}
+
+.d_flex--1 {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+.rounded-1 {
+  border-radius: 7px !important;
+}
+
+.rounded-2 {
+  border-radius: 10px !important;
+}
+
+.hidden {
+  overflow: hidden !important;
+}
+
+.p10 {
+  padding: 10px !important;
 }
