--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,20 @@
   -moz-osx-font-smoothing: grayscale;
 } */
 
+@font-face {
+  font-family: 'IranSans';
+  font-style: normal;
+  font-weight: normal;
+  src: url("./assets/font/iranSans/IRANSans-Medium-web.eot"); /* IE9 Compat Modes */
+  src: url("./assets/font/iranSans/IRANSans-Medium-web.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
+       url("./assets/font/iranSans/IRANSans-Medium-web.otf") format("opentype"), /* Open Type Font */
+       url("./assets/font/iranSans/IRANSans-Medium-web.svg") format("svg"), /* Legacy iOS */
+       url("./assets/font/iranSans/IRANSans-Medium-web.ttf") format("truetype"), /* Safari, Android, iOS */
+       url("./assets/font/iranSans/IRANSans-Medium-web.woff") format("woff"), /* Modern Browsers */
+       url("./assets/font/iranSans/IRANSans-Medium-web.woff2") format("woff2"); /* Modern Browsers */
+}
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -20,6 +34,7 @@ code {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: "IranSans" !important;
 }
 
 :root {
@@ -43,7 +58,7 @@ html {
 }
 
 body {
-  font-family: "IRANSans-Medium" !important;
+  font-family: "IranSans" !important;
 }
 
 img {
