--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ code {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: "IranSans" !important;
+  font-family: "IranSans" ;
 }
 
 :root {
