--- a/src/components/profile/myProducts/myProducts.module.css
+++ b/src/components/profile/myProducts/myProducts.module.css
@@ -43,7 +43,7 @@
 .myproducts .boxtable {
     width: 100%;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
     overflow: auto;
@@ -51,7 +51,7 @@
 
 .myproducts .boxtable table {
     width: 100%;
-    min-width: 600px;
+    min-width: 500px;
     border-spacing: 0;
 }
 
