--- a/src/components/profile/profile.module.css
+++ b/src/components/profile/profile.module.css
@@ -18,7 +18,7 @@
 .profile .sidebarSection {
     position: relative;
     width: 300px;
-    height: 80vh;
+    min-height: 80vh;
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
