--- a/src/components/register/role.module.css
+++ b/src/components/register/role.module.css
@@ -24,7 +24,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
     flex-direction: column;
 }
 
