--- a/src/components/support/newTicket/style.module.css
+++ b/src/components/support/newTicket/style.module.css
@@ -100,8 +100,9 @@ form {
 
 .footer .import {
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
   font-size: clamp(1rem, 1.4vw, 1.4rem);
 }
 
@@ -137,4 +138,44 @@ form {
 }
 .inputTitle {
   width: 70% !important;
+}
+
+.lowerContainer {
+  width: 100%;
+  display: flex;
+}
+
+.lowerContainer button {
+  width: clamp(7rem, 10vw, 10rem);
+  color: #fff;
+  background: rgb(66, 139, 202);
+  padding: 0.7rem 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: clamp(1rem, 1.4vw, 1.4rem);
+}
+
+.lowerContainer button:hover {
+  cursor: pointer;
+  background-color: rgba(66, 139, 202, 0.95);
+}
+
+.plusButton {
+  width: "40px";
+  height: "40px";
+  font-size: "40px";
+  display: "flex";
+  justify-content: "center";
+  align-items: "center";
+  cursor: "pointer";
+  color: "#428aca";
+  background-color: white;
+}
+
+.plusButton:hover {
+  cursor: pointer;
+  border-radius: 3px;
+  border: 1px solid black;
+  color: rgb(6, 46, 81);
 }
