--- a/src/components/register/role.module.css
+++ b/src/components/register/role.module.css
@@ -1,11 +1,12 @@
 .role {
     width: 100%;
-    min-height: 60vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
-    padding: 5rem 2rem;
+    padding: 10rem 2rem 0;
+    background: #5096ff;
 }
 
 .role .stepBox {
