--- a/src/components/profile/storeRegister/storeRegister.module.css
+++ b/src/components/profile/storeRegister/storeRegister.module.css
@@ -110,6 +110,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    cursor: pointer;
 }
 
 .store .box_btn button {
