--- a/src/components/profile/addProduct/addProduct.module.css
+++ b/src/components/profile/addProduct/addProduct.module.css
@@ -36,16 +36,29 @@
     background: rgb(25, 118, 210);
     border: none;
     border-radius: 2rem;
-    padding: clamp(.9rem, 1.3vw, 1.3rem);
+    padding: 0 clamp(.9rem, 1.3vw, 1.3rem);
     width: clamp(8rem, 12vw, 12rem);
+    height: clamp(2.5rem, 4vw, 4rem);
     display: flex;
     align-items: center;
     justify-content: center;
     transition: all .2s;
+    overflow: hidden;
 }
 .addProduct .footer button:hover {
     cursor: pointer;
     background: rgb(10, 92, 62);
+}
+
+.addProduct .footer img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    background: transparent;
+}
+.addProduct .footer p {
+    width: 100%;
+    text-align: center;
 }
 
 .addProduct .name_grouping,
@@ -175,6 +188,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    margin: .7rem 0;
 }
 
 .addProduct .images .boximage {
@@ -211,6 +225,7 @@
 .addProduct .images .boximage p {
     color: #777;
     font-size: clamp(.7rem, 1vw, 1rem);
+    text-align: center;
 }
 
 .addProduct .images .addImg .listImage {
@@ -365,6 +380,7 @@
     border-radius: .7rem;
     outline: none;
     margin: 2rem 0 0 0;
+    padding: clamp(.5rem, 1vw, 1rem);
 }
 /* ----------- Attributes ------------ */
 
@@ -433,6 +449,7 @@
     border-radius: .7rem;
     outline: none;
     margin: 2rem 0 0 0;
+    padding: clamp(.5rem, 1vw, 1rem);
 }
 
 .attributes .box .boxinput_checked {
