--- a/src/components/support/tikesList/ticketComponent/ticketComponent.module.css
+++ b/src/components/support/tikesList/ticketComponent/ticketComponent.module.css
@@ -205,10 +205,121 @@
     text-align: justify;
 }
 
+
+
+.ticket .box_input_message {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: initial;
+    padding-top: 3rem;
+    border-top: 2px solid #959595;
+}
+
+.ticket .box_input_message textarea {
+    width: 50%;
+    height: clamp(10vh, 22vh, 22vh);
+    border: 2px solid #5476dc;
+    border-radius: .7rem;
+    outline: none;padding: 1rem;
+    font-size: clamp(.9rem, 1.2vw, 1.2rem);
+    /* margin: 1rem 0; */
+}
+
+.ticket .box_input_message button {
+    color: #fff;
+    background: #5476dc;
+    font-size: clamp(1.2rem, 1.5vw, 1.5rem);
+    width: 100%;
+    max-width: 200px;
+    height: 4rem;
+    border-radius: .7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0;
+}
+
+.footer {
+    width: 50%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 2rem;
+}
+
+.footer button {
+    width: clamp(7rem, 10vw, 10rem);
+    color: #fff;
+    background: #428bca;
+    padding: 0.7rem 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: clamp(1rem, 1.4vw, 1.4rem);
+    margin: 1rem 0;
+}
+
+.footer button:hover {
+    cursor: pointer;
+}
+
+.footer .import {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    font-size: clamp(1rem, 1.4vw, 1.4rem);
+}
+  
+.footer .import label {
+    position: relative;
+    height: 100%;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: clamp(1rem, 1.4vw, 1.4rem);
+    border: 1px solid #e5e5e5;
+    padding: 1rem;
+}
+  
+  .footer .import input:hover {
+    cursor: pointer;
+  }
+  
+  .footer .import input {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+  }
+  
+  .footer .import p {
+    color: #428bca;
+    font-size: clamp(0.6rem, 0.9vw, 0.9rem);
+    margin: 0 1rem 0 0;
+  }
+
+  
 @media (max-width: 700px) {
     .ticket .box_ticket .chats .user .textbox,
     .ticket .box_ticket .chats .admin .textbox {
         width: 80%;
     }
-
+    .ticket .box_input_message {
+        flex-direction: column;
+    }
+    .ticket .box_input_message textarea {
+        width: 100%;
+    }
+    .footer {
+        width: 50%;
+        margin: 1rem 0;
+    }
 }
